# routes/users_route.js
@@ -4,9 +4,16 @@ router = express.Router();
 const controller = require("../controllers/users_controller");
 const validation = require("../middleware/users_validator")
 
-router.get("/", controller.getAllUsers)
+const auth = require("../middleware/authorization")
 
-router.get("/:id", controller.getOneUser)
+router.get("/", auth.isLoggedIn, (req, res) => {
+    /* #swagger.security = [{ "bearerAuth": [] }] */
+    controller.getAllUsers(req, res);
+});
+
+router.get("/:id", auth.isLoggedIn,
+    /* #swagger.security = [{ "bearerAuth": [] }] */
+    controller.getOneUser)
 
 router.post("/", validation.users, controller.createUser)
 
